@@ -1,3 +1,8 @@
+2016-06-01  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* chopstx.h (chx_fatal): Remove weak attribute from declaration.
+	* chopstx.c (chx_fatal): Add weak attribute to implementation.
+
 2016-05-31  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 0.12.
